removing copy and paste

--- a/index.html
+++ b/index.html
@@ -47,23 +47,11 @@
   <!--about me-->
   <section class="text-center" id="about-me">
     <div class="container">
-  <!--<h1>Who Am I</h1>-->
-  <div class="text-center">
-
-          <img class="rounded-circle img-fluid" src="images/profile.jpg" alt="Profile Picture" style="width:200px">
-  </div>
-
-  <p>I work for <a href="http://clicksco.com/" target="_blank">Clicksco,</a> an amazing internet company based <br />in Dubai with a focus on great startups and innovative products.</p>
-
-  <div class="row social-icons">
-    <div class="col-sm-1 col-sm-offset-5">
-      <a class="icon-social icon-facebook" href="https://www.facebook.com/profile.php?id=747373351" target="_blank">Facebook</a>
-    </div>
-    <div class="col-sm-1">
-      <a class="icon-social icon-twitter" href="https://twitter.com/SteveWi66914199" target="_blank">Twitter</a>
-    </div>
-  </div>
-</div>><!-- container -->
+      <!--<h1>Who Am I</h1>-->
+      <div class="text-center">
+        <img class="rounded-circle img-fluid" src="images/profile.JPG" alt="Profile Picture" style="width:200px">
+      </div>
+    </div><!-- container -->
   </section>
   <!-- end about me -->
 
