--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="icon" href="images/Logo.png">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/font-awesome.css">
@@ -69,11 +70,11 @@
       </p>
       <h1>About me</h1>
       <div class="text-justify">
-        <p>Computer Scientist graduted at UNIFESP - Brazil, studying Mobile Solutions Development at Conestoga College - Canada.</p>
+        <p>Computer Scientist graduated at UNIFESP - Brazil, studying Mobile Solutions Development at Conestoga College - Canada.</p>
         <p>
           I am a full-stack developer looking for new challenges. I have been programming since 2010, and I am passionate about creating solutions and changing other
           people's lives through coding. When I am not working or studying, I like taking pictures, cooking and enjoying my family, after all, happiness is in the
-          balance between duties end joys. Scroll down to find out more about my professional profile.
+          balance between duties and joys. Scroll down to find out more about my professional profile.
         </p>
       </div>
     </div> <!--col-lg-12-->
@@ -164,11 +165,13 @@
                 <div id="card-block-work1" class="collapse" role="tabpanel" aria-labelledby="card-header-work1">
                   <div class="card-block">
                     <ul class="text-justify">
-                      <li>Maintenance and support</li>
-                      <li>Unit and integration test</li>
-                      <li>Development of new features to display more informative charts</li>
+					  <li>Acquired knowledge in Business Intelligence process</li>
+                      <li>Provided Maintenance and support</li>
+                      <li>Performed Unit and integration test</li>
+					  <li>Integrated Pentaho Mondrian to display Pivot tables in the system</li>
+                      <li>Developed new features to display more informative charts</li>
                       <li>Display Pivot tables</li>
-                      <li>Layout redesigning using AngularJS</li>
+                      <li>Redesigned layout using AngularJS</li>
                     </ul>
                   </div><!--card block-->
                 </div><!--card block container-->
@@ -187,10 +190,12 @@
                 <div id="card-block-work2" class="collapse" role="tabpanel" aria-labelledby="card-header-work2">
                   <div class="card-block">
                     <ul class="text-justify">
-                      <li>Integration different projects' functionalities</li>
-                      <li>Development of custom features</li>
-                      <li>Maintenance and support</li>
-                      <li>Development of better solutions according to user experiences</li>
+                      <li>Integrated different projects functionalities</li>
+                      <li>Developed custom features</li>
+                      <li>Provided Maintenance and support</li>
+					  <li>Performed Unit and integration test</li>
+                      <li>Developed better solutions according to user experiences</li>
+					  <li>Negotiated deadlines and solutions with QA team, manager and client</li>
                     </ul>
                   </div><!--card block-->
                 </div><!--card block container-->
@@ -210,9 +215,9 @@
                 <div id="card-block-work3" class="collapse" role="tabpanel" aria-labelledby="card-header-work3">
                   <div class="card-block">
                     <ul class="text-justify">
-                      <li>Management  of projects applying Agile Methods and PMP (Project Management Profissional) guidelines</li>
-                      <li>Implementation machine learning algorithm to recognize the ECG peak.</li>
-                      <li>Development web system to manage the hospital diet</li>
+                      <li>Managed projects applying Agile Methods and PMP (Project Management Profissional) guidelines</li>
+                      <li>Implemented machine learning algorithm to recognize the ECG peak.</li>
+                      <li>Developed web system to manage hospital patients' diets</li>
                     </ul>
                   </div><!--card block-->
                 </div><!--card block container-->
